[package]
name = "astrcode-extension-skill"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Claude-style skill discovery and Skill tool extension"

[lib]
crate-type = ["rlib"]

[dependencies]
astrcode-extension-sdk = { path = "../astrcode-extension-sdk" }
astrcode-support = { path = "../astrcode-support" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
