[package]
name = "astrcode-extension-todo-tool"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Progress todo list extension"

[lib]
crate-type = ["rlib"]

[dependencies]
astrcode-extension-sdk = { path = "../astrcode-extension-sdk" }
astrcode-support = { path = "../astrcode-support" }
async-trait = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
