[package]
name = "astrcode-extension-web-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Web search and URL fetch tools"

[dependencies]
astrcode-extension-sdk = { path = "../astrcode-extension-sdk" }
async-trait = { workspace = true }
html2text = "0.12"
parking_lot = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
scraper = "0.27"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "rt-multi-thread", "macros"] }
chrono = { workspace = true }
url = "2"
