[package]
name = "astrcode-extensions"
version = "0.2.2"
edition = "2021"
description = "Extension/hook system: lifecycle events, hook modes, extension loading and dispatch"

[dependencies]
astrcode-core = { path = "../astrcode-core" }
astrcode-extension-sdk = { path = "../astrcode-extension-sdk" }
astrcode-support = { path = "../astrcode-support" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
parking_lot = { workspace = true }
tokio-util = { workspace = true }
wasmtime = { version = "43", default-features = false, features = ["cranelift", "runtime"] }
wasmtime-wasi = "43"

[dev-dependencies]
astrcode-storage = { path = "../astrcode-storage", features = ["testing"] }
wasm-encoder = "0.245"
wat = "1"
tempfile = { workspace = true }
