[package]
name = "astrcode-extensions"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Extension/hook system: lifecycle events, hook modes, extension loading and dispatch"

[dependencies]
astrcode-core = { path = "../astrcode-core" }
astrcode-extension-sdk = { path = "../astrcode-extension-sdk" }
astrcode-support = { path = "../astrcode-support" }
tokio = { workspace = true, features = ["fs", "io-util", "process", "rt-multi-thread", "macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
dirs = { workspace = true }
parking_lot = { workspace = true }
tokio-util = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "macros"] }
astrcode-storage = { path = "../astrcode-storage", features = ["testing"] }
tempfile = { workspace = true }
